runtime/server/include/CSharpResourceImpl.h

typedef void (* CreatePlayerDelegate_t)(alt::IPlayer* player, uint16_t id);
typedef void (* RemovePlayerDelegate_t)(alt::IPlayer* player);
typedef void (* CreateVehicleDelegate_t)(alt::IVehicle* vehicle, uint16_t id);
typedef void (* RemoveVehicleDelegate_t)(alt::IVehicle* vehicle);
typedef void (* CreateBlipDelegate_t)(alt::IBlip* blip);
typedef void (* RemoveBlipDelegate_t)(alt::IBlip* blip);
typedef void (* CreateCheckpointDelegate_t)(alt::ICheckpoint* checkpoint);
typedef void (* RemoveCheckpointDelegate_t)(alt::ICheckpoint* checkpoint);
typedef void (* CreateVoiceChannelDelegate_t)(alt::IVoiceChannel* channel);
typedef void (* RemoveVoiceChannelDelegate_t)(alt::IVoiceChannel* channel);
typedef void (* CreateColShapeDelegate_t)(alt::IColShape* colShape);
typedef void (* RemoveColShapeDelegate_t)(alt::IColShape* colShape);
typedef void (* ConsoleCommandDelegate_t)(const char* name, const char* args[], int argsSize);
typedef void (* MetaChangeDelegate_t)(void* entity, alt::IBaseObject::Type type, const char* key,
                                      alt::MValueConst* value);
typedef void (* ColShapeDelegate_t)(void* colShape, void* entity, alt::IBaseObject::Type baseObjectType,
                                    bool state);
typedef void (* VehicleDestroyDelegate_t)(alt::IVehicle* vehicle);
typedef void (* FireDelegate_t)(const alt::CEvent* event, alt::IPlayer* source, alt::CFireEvent::FireInfo fires[],
                                int fireSize);
typedef void (* StartProjectileDelegate_t)(const alt::CEvent* event, alt::IPlayer* source, position_t startPosition,
                                           position_t direction,
                                           uint32_t ammoHash, uint32_t weaponHash);
typedef void (* PlayerWeaponChangeDelegate_t)(const alt::CEvent* event, alt::IPlayer* target, uint32_t oldWeapon,
                                              uint32_t newWeapon);
typedef void (* NetOwnerChangeDelegate_t)(const alt::CEvent* event, void* target, alt::IBaseObject::Type targetType, alt::IPlayer* oldNetOwner, alt::IPlayer* newNetOwner);
typedef void (* VehicleAttachDelegate_t)(const alt::CEvent* event, alt::IVehicle* target, alt::IVehicle* attached);
typedef void (* VehicleDetachDelegate_t)(const alt::CEvent* event, alt::IVehicle* target, alt::IVehicle* detached);
typedef void (* VehicleDamageDelegate_t)(const alt::CEvent* event, alt::IVehicle* target, void* attacker, alt::IBaseObject::Type attackerBaseObjectType,
    uint32_t bodyHealthDamage, uint32_t additionalBodyHealthDamage, uint32_t engineHealthDamage, uint32_t petrolTankDamage, uint32_t weaponHash);
typedef void (* ConnectionQueueAddDelegate_t)(alt::IConnectionInfo* connectionInfo);
typedef void (* ConnectionQueueRemoveDelegate_t)(alt::IConnectionInfo* connectionInfo);
typedef void (* ServerStartedDelegate_t)();
typedef void (* PlayerRequestControlDelegate_t)(void* target, alt::IBaseObject::Type targetBaseObjectType, alt::IPlayer* player);
EXPORT void CSharpResourceImpl_SetCreatePlayerDelegate(CSharpResourceImpl* resource,
                                                       CreatePlayerDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetRemovePlayerDelegate(CSharpResourceImpl* resource,
                                                       RemovePlayerDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetCreateVehicleDelegate(CSharpResourceImpl* resource,
                                                        CreateVehicleDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetRemoveVehicleDelegate(CSharpResourceImpl* resource,
                                                        RemoveVehicleDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetCreateBlipDelegate(CSharpResourceImpl* resource,
                                                     CreateBlipDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetRemoveBlipDelegate(CSharpResourceImpl* resource,
                                                     RemoveBlipDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetCreateCheckpointDelegate(CSharpResourceImpl* resource,
                                                           CreateCheckpointDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetRemoveCheckpointDelegate(CSharpResourceImpl* resource,
                                                           RemoveCheckpointDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetCreateVoiceChannelDelegate(CSharpResourceImpl* resource,
                                                             CreateVoiceChannelDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetRemoveVoiceChannelDelegate(CSharpResourceImpl* resource,
                                                             RemoveVoiceChannelDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetConsoleCommandDelegate(CSharpResourceImpl* resource,
                                                         ConsoleCommandDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetMetaChangeDelegate(CSharpResourceImpl* resource,
                                                     MetaChangeDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetSyncedMetaChangeDelegate(CSharpResourceImpl* resource,
                                                           MetaChangeDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetCreateColShapeDelegate(CSharpResourceImpl* resource,
                                                         CreateColShapeDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetRemoveColShapeDelegate(CSharpResourceImpl* resource,
                                                         RemoveColShapeDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetColShapeDelegate(CSharpResourceImpl* resource,
                                                   ColShapeDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetVehicleDestroyDelegate(CSharpResourceImpl* resource,
                                                         VehicleDestroyDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetFireDelegate(CSharpResourceImpl* resource,
                                               FireDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetStartProjectileDelegate(CSharpResourceImpl* resource,
                                                          StartProjectileDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetPlayerWeaponChangeDelegate(CSharpResourceImpl* resource,
                                                             PlayerWeaponChangeDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetNetOwnerChangeDelegate(CSharpResourceImpl* resource,
                                                         NetOwnerChangeDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetVehicleAttachDelegate(CSharpResourceImpl* resource,
                                                 VehicleAttachDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetVehicleDetachDelegate(CSharpResourceImpl* resource,
                                                 VehicleDetachDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetVehicleDamageDelegate(CSharpResourceImpl* resource,
    VehicleDamageDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetConnectionQueueAddDelegate(CSharpResourceImpl* resource,
                                                      ConnectionQueueAddDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetConnectionQueueRemoveDelegate(CSharpResourceImpl* resource,
                                                         ConnectionQueueRemoveDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetServerStartedDelegate(CSharpResourceImpl* resource,
                                                         ServerStartedDelegate_t delegate);
EXPORT void CSharpResourceImpl_SetPlayerRequestControlDelegate(CSharpResourceImpl* resource,
                                                            PlayerRequestControlDelegate_t delegate);